--- a/views/components/nav-setting.ejs
+++ b/views/components/nav-setting.ejs
@@ -6,11 +6,11 @@
         <% if (user) { %>
           <a class="item" href="/posts?author=<%= user._id %>">个人主页</a>
           <div class="divider"></div>
-          <a class="item" href="/posts/create">发表文章</a>
+          <a class="item" href="/posts/create">發表文章</a>
           <a class="item" href="/signout">登出</a>
         <% } else { %>
-          <a class="item" href="/signin">登录</a>
-          <a class="item" href="/signup">注册</a>
+          <a class="item" href="/signin">登入</a>
+          <a class="item" href="/signup">註冊</a>
         <% } %>
       </div>
     </div>
